[package]
name = "inline_assets"
version = "0.3.1"
description = "A Rust library for inlining Javascript, CSS, and font files into your html files for easy distribution."
readme = "README.md"
license = "MIT"
authors = ["Hand-of-Cthulhu <3rdhandofcthulhu@gmail.com>"]
exclude = ["examples/*", "tests/*", ".travis.yml"]
repository = "https://github.com/Hand-of-Cthulhu/inline-assets-rs"
homepage = "https://github.com/Hand-of-Cthulhu/inline-assets-rs"
keywords = ["inline", "html", "assets", "build"]
categories = ["web-programming"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "Hand-of-Cthulhu/inline-assets-rs", branch = "master" }

[[example]]
name = "html_inliner"

[lib]
name = "inline_assets"

[dependencies]
regex="1.0.1"
base64 = "0.9.2"

[dev-dependencies]
clap="2.32.0"
pretty_assertions = "0.5.1"