[package]
name = "inline_assets"
version = "0.4.1"
description = "A Rust library for inlining Javascript, CSS, and font files into your html files for easy distribution."
readme = "README.md"
license = "MIT"
authors = ["Hand-of-Cthulhu <3rdhandofcthulhu@gmail.com>"]
exclude = ["examples/*", "tests/*", ".travis.yml"]
repository = "https://github.com/Hand-of-Cthulhu/inline-assets-rs"
homepage = "https://github.com/Hand-of-Cthulhu/inline-assets-rs"
keywords = ["inline", "html", "assets", "build"]
categories = ["web-programming"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "Hand-of-Cthulhu/inline-assets-rs", branch = "master" }

[[example]]
name = "html_inliner"

[lib]
name = "inline_assets"

[dependencies]
regex= "1.2.1"
base64 = "0.10.1"
kuchiki = "0.7.3"
html5ever = "0.23.0"
pathdiff = "0.1.0"

[dev-dependencies]
clap= "2.33.0"
pretty_assertions = "0.6.1"
insta = "0.10.1"
