[package]
name = "inline_assets"
version = "0.4.2"
description = "A Rust library for inlining Javascript, CSS, and font files into your html files for easy distribution."
readme = "README.md"
license = "MIT"
authors = ["8176135 <elsecaller@8176135.xyz>"]
exclude = ["examples/*", "tests/*", ".travis.yml"]
repository = "https://github.com/8176135/inline-assets-rs"
homepage = "https://github.com/8176135/inline-assets-rs"
keywords = ["inline", "html", "assets", "build"]
categories = ["web-programming"]
edition = "2018"

[badges]
maintenance = { status = "looking-for-maintainer" }
# travis-ci = { repository = "Hand-of-Cthulhu/inline-assets-rs", branch = "master" }

[[example]]
name = "html_inliner"

[lib]
name = "inline_assets"

[dependencies]
regex = "1.5.4"
base64 = "0.13.0"
kuchiki = "0.8.1"
html5ever = "0.25.1"
pathdiff = "0.2.1"

[dev-dependencies]
clap= "2.33.0"
pretty_assertions = "0.6.1"
insta = "1.12.0"
